--- a/app/loja/templates/loja/produto_detalhe.html
+++ b/app/loja/templates/loja/produto_detalhe.html
@@ -5,18 +5,22 @@
 {% endblock %}
 
 {% block opengraph %}
-    <meta property="og:title" content="{{ produto.nome }} - M4 Tática">
-    <meta property="og:description" content="Confira {{ produto.nome }} na M4 Tática.{{ desc_calibre }} Garanta o seu com segurança e qualidade.">
+    <meta property="og:title" content="{{ produto.nome_comercial if produto.nome_comercial else produto.nome }} - M4 Tática">
+    
+    {# Correção: Usando calibre_rel e evitando exibição se estiver vazio #}
+    {% set desc_calibre = " Calibre " ~ produto.calibre_rel.nome ~ "." if produto.calibre_rel else "" %}
+    <meta property="og:description" content="Confira {{ produto.nome_comercial if produto.nome_comercial else produto.nome }} na M4 Tática.{{ desc_calibre }} Garanta o seu com segurança e qualidade.">
+    
     <meta property="og:url" content="{{ request.url }}">
     
-    {% set imagem_principal = produto.foto_url or produto.imagem_principal %}
+    {% set imagem_principal = produto.foto_url %}
     {% if imagem_principal %}
         <meta property="og:image" content="{{ gerar_link(imagem_principal) }}">
     {% endif %}
     
     <meta property="og:type" content="product">
     
-    {# Correção tática: Acessando a chave preco_a_vista do dicionário precos #}
+    {# Extração do preço para as redes sociais #}
     {% if precos and precos.preco_a_vista %}
         <meta property="product:price:amount" content="{{ "{:.2f}".format(precos.preco_a_vista) }}">
         <meta property="product:price:currency" content="BRL">
